samples/_failures_safe/1761219263_2629d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4adb35fe.c: In function ‘main’:
./samples/SAFE/__tmp_4adb35fe.c:156:9: error: expected declaration or statement at end of input
  156 |         printf("Final checksum: 0x%08X\n", result.final_checksum);
      |         ^~~~~~
./samples/SAFE/__tmp_4adb35fe.c:156:9: error: expected declaration or statement at end of input
